--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "ali-eltaweel/bitmask",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "description": "A simple bitmask library for PHP",
     "maintainers": [
         {
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "ali-eltaweel/attr-action": "^1.0.0"
     },
     "autoload": {
         "psr-4": {
